--- a/assets/sass/sections/_our-clients.scss
+++ b/assets/sass/sections/_our-clients.scss
@@ -1,5 +1,9 @@
 .our-clients {
-    @apply py-16;
+    @apply pt-32;
+
+    @screen md {
+        @apply pb-2;
+    }
 
     &__content {
         @apply flex justify-center items-start pt-5 pb-4;
