--- a/assets/sass/sections/_pricings.scss
+++ b/assets/sass/sections/_pricings.scss
@@ -1,6 +1,5 @@
 .pricing {
-
-    @apply py-24;
+    @apply py-32 pb-24;
 
     &__header {
         @apply pb-16;
